@@ -6,21 +6,25 @@
 <span metal:fill-slot="body_title" tal:omit-tag="python:1"
  i18n:translate="">"Your Queries" Editing</span>
 
-<td class="content" metal:fill-slot="content">
+<td class="content" metal:fill-slot="content"
+    tal:define="anti_csrf_this_page python:utils.anti_csrf_nonce()" >
 
 <span tal:condition="not:context/is_edit_ok"
  i18n:translate="">You are not allowed to edit queries.</span>
 
-<script language="javascript">
+<script tal:attributes="nonce request/client/client_nonce"
+	language="javascript">
 // This allows us to make the delete button an immediate action.
 // The post_to_url function comes from:
 //    http://stackoverflow.com/questions/133925/javascript-post-request-like-a-form-submit
-function retire(qid) {
-    post_to_url('query'+qid, {'@action': 'retire', '@template': 'edit'});
+function retire(qid, csrf) {
+    post_to_url('query'+qid, {'@action': 'retire', '@template':'edit',
+                '@csrf': csrf});
 }
 
-function restore(qid) {
-    post_to_url('query'+qid, {'@action': 'restore', '@template': 'edit'});
+function restore(qid, csrf) {
+    post_to_url('query'+qid, {'@action': 'restore', '@template': 'edit',
+                '@csrf': csrf});
 }
 function post_to_url(path, params, method) {
     method = method || "post"; // Set method to post by default if not specified.
@@ -93,7 +97,7 @@ function post_to_url(path, params, method) {
 
  <td>
   <input type="button" value="Delete" i18n:attributes="value"
-  tal:attributes="onClick python:'''retire('%s')'''%query.id">
+  tal:attributes="onClick python:'''retire('%s','%s')'''%(query.id,anti_csrf_this_page)">
   </td>
   </tal:block>
 </tr>
@@ -135,7 +139,7 @@ function post_to_url(path, params, method) {
  <td colspan="3" tal:condition="python:  query.creator == uid" i18n:translate="">[query is retired]</td>
  <td tal:condition="python:query.creator == uid">
   <input type="button" value="Restore" i18n:attributes="value"
-  tal:attributes="onClick python:'''restore('%s')'''%query.id">
+  tal:attributes="onClick python:'''restore('%s','%s')'''%(query.id,anti_csrf_this_page)">
   </td>
  <td colspan="1" tal:condition="python:not query.creator == uid" tal:content="query/creator" i18n:translate="">put query owner here</td>
  </tal:block>
@@ -150,17 +154,17 @@ function post_to_url(path, params, method) {
  <td colspan="2" i18n:translate="">[query is private]</td>
  <td tal:condition="python:query.creator == uid">
   <input type="button" value="Restore" i18n:attributes="value"
-  tal:attributes="onClick python:'''restore('%s')'''%query.id">
+  tal:attributes="onClick python:'''restore('%s','%s')'''%(query.id,anti_csrf_this_page)">
    </td>
  <td colspan="1" tal:content="query/creator" i18n:translate="">put query owner here</td>
  </tal:block>
 </tr>
 </tal:block>
 <tr><td colspan="5">
-    <input name="@csrf" type="hidden"
-	   tal:attributes="value python:utils.anti_csrf_nonce()">
    <input type="hidden" name="@action" value="edit">
    <input type="hidden" name="@template" value="edit">
+   <input name="@csrf" type="hidden"
+          tal:attributes="value anti_csrf_this_page">
    <input type="submit" value="Save Selection" i18n:attributes="value">
 </td></tr>
 
